# crewai-multiflow-template

./: .gitignore  README.md  pyproject.toml  run_api.py  run_flow.py
.github/: copilot-instructions.md
.github/chatmodes/: crewmaster.chatmode.md
.github/prompts/: create-flow.prompt.md
crewai_practices/: crafting-effective-agents.md
docs/: api-quickstart.md  fastapi-implementation.md  project-structure.md
examples/: api_usage.py
src/api/: README.md  __init__.py  app.py  common.py  execution_store.py  executions_router.py
src/api/poem_flow/: __init__.py  models.py  router.py
src/flows/poem_flow/: main.py
src/flows/poem_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
